Adding support for request params while building get request